--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "EEE 33",
-    "short_name": "EEE 33",
+    "name": "EEE",
+    "short_name": "EEE",
     "start_url": "index.html",
     "display": "standalone",
     "background_color": "#FFF",
@@ -9,12 +9,12 @@
     "description": "Get your Routine Organised. Currently unofficial and expected to be officially available soon.",
     "icons": [
         {
-            "src": "images/icon-192x192.png",
+            "src": "images/icon-main-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "images/icon-512x512.png",
+            "src": "images/icon-main-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
